syntax = "proto3";

package resource_utilization;

message ResourceUtilizationRequest {

}

message ResourceUtilizationResponse {
  uint32 cpu_resource = 1;
  uint32 memory_resource = 2;
  string timestamp = 3;
}

service ResourceUtilization {
  rpc Send(ResourceUtilizationRequest) returns (stream ResourceUtilizationResponse);
}